--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">
-            Эффективные решения для вашего бизнеса
+            Эффективные решения <br />для вашего бизнеса
           </h1>
           <button class="modal-btn">Заказать услугу</button>
         </div>
@@ -166,35 +166,37 @@
               <p class="team-list-item-position">Product Designer</p>
               <ul class="social-list list">
                 <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка инстаграма"
-                    ><img src="./images/team/Ellipse-1.svg" alt=""
-                  /></a>
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка твиттера"
-                    ><img src="./images/team/Ellipse-2.svg" alt=""
-                  /></a>
-                </li>
-                <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка фейсбука"
-                    ><img src="./images/team/Ellipse-3.svg" alt="" />
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
                   <a
                     class="social-lisy-item-link"
                     href=""
+                    aria-label="иконка фейсбука"
+                    ><svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    class="social-list-item-link"
+                    href=""
                     aria-label="иконка линкедина"
-                    ><img src="./images/team/Ellipse-4.svg" alt="" />
+                    ><svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#linkedin"></use>
+                    </svg>
                   </a>
                 </li>
               </ul>
@@ -211,36 +213,39 @@
               <p class="team-list-item-position">Frontend Developer</p>
               <ul class="social-list list">
                 <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка инстаграма"
-                    ><img src="./images/team/Ellipse-1.svg" alt=""
-                  /></a>
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка твиттера"
-                    ><img src="./images/team/Ellipse-2.svg" alt=""
-                  /></a>
+                </li>
+               <li class="social-list-item">
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-list-item">
                   <a
                     class="social-lisy-item-link"
                     href=""
                     aria-label="иконка фейсбука"
-                    ><img src="./images/team/Ellipse-3.svg" alt=""
-                  /></a>
+                    ><svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-list-item">
+               <li class="social-list-item">
                   <a
-                    class="social-lisy-item-link"
+                    class="social-list-item-link"
                     href=""
                     aria-label="иконка линкедина"
-                    ><img src="./images/team/Ellipse-4.svg" alt=""
-                  /></a>
+                    ><svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -255,37 +260,39 @@
               <h3 class="team-name-title">Андрей Шевченко</h3>
               <p class="team-list-item-position">Marketing</p>
               <ul class="social-list list">
-                <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка инстаграма"
-                    ><img src="./images/team/Ellipse-1.svg" alt=""
-                  /></a>
+               <li class="social-list-item">
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка твиттера"
-                    ><img src="./images/team/Ellipse-2.svg" alt=""
-                  /></a>
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-list-item">
                   <a
                     class="social-lisy-item-link"
                     href=""
                     aria-label="иконка фейсбука"
-                    ><img src="./images/team/Ellipse-3.svg" alt=""
-                  /></a>
+                    ><svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-list-item">
                   <a
-                    class="social-lisy-item-link"
+                    class="social-list-item-link"
                     href=""
                     aria-label="иконка линкедина"
-                    ><img src="./images/team/Ellipse-4.svg" alt=""
-                  /></a>
+                    ><svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -301,36 +308,38 @@
               <p class="team-list-item-position">UI Designer</p>
               <ul class="social-list list">
                 <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка инстаграма"
-                    ><img src="./images/team/Ellipse-1.svg" alt=""
-                  /></a>
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка твиттера"
-                    ><img src="./images/team/Ellipse-2.svg" alt=""
-                  /></a>
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-list-item">
                   <a
                     class="social-lisy-item-link"
                     href=""
                     aria-label="иконка фейсбука"
-                    ><img src="./images/team/Ellipse-3.svg" alt=""
-                  /></a>
+                    ><svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-list-item">
                   <a
-                    class="social-lisy-item-link"
+                    class="social-list-item-link"
                     href=""
                     aria-label="иконка линкедина"
-                    ><img src="./images/team/Ellipse-4.svg" alt=""
-                  /></a>
+                    ><svg class="social-media-link-item-svg">
+                      <use href="./images/svg/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
