--- a/index.html
+++ b/index.html
@@ -167,15 +167,15 @@
               <ul class="social-list list">
                 <li class="social-list-item">
                   <a class="social-list-item-link" href="">
-                    <svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#instagram"></use>
+                    <svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
                   <a class="social-list-item-link" href="">
-                    <svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#twitter"></use>
+                    <svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -184,8 +184,8 @@
                     class="social-lisy-item-link"
                     href=""
                     aria-label="иконка фейсбука"
-                    ><svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#facebook"></use>
+                    ><svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -194,8 +194,8 @@
                     class="social-list-item-link"
                     href=""
                     aria-label="иконка линкедина"
-                    ><svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#linkedin"></use>
+                    ><svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -214,16 +214,16 @@
               <ul class="social-list list">
                 <li class="social-list-item">
                   <a class="social-list-item-link" href="">
-                    <svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#instagram"></use>
+                    <svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 </li>
                <li class="social-list-item">
                   <a class="social-list-item-link" href="">
-                    <svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#twitter"></use>
+                    <svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -232,8 +232,8 @@
                     class="social-lisy-item-link"
                     href=""
                     aria-label="иконка фейсбука"
-                    ><svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#facebook"></use>
+                    ><svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -242,8 +242,8 @@
                     class="social-list-item-link"
                     href=""
                     aria-label="иконка линкедина"
-                    ><svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#linkedin"></use>
+                    ><svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -262,15 +262,15 @@
               <ul class="social-list list">
                <li class="social-list-item">
                   <a class="social-list-item-link" href="">
-                    <svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#instagram"></use>
+                    <svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
                   <a class="social-list-item-link" href="">
-                    <svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#twitter"></use>
+                    <svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -279,8 +279,8 @@
                     class="social-lisy-item-link"
                     href=""
                     aria-label="иконка фейсбука"
-                    ><svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#facebook"></use>
+                    ><svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -289,8 +289,8 @@
                     class="social-list-item-link"
                     href=""
                     aria-label="иконка линкедина"
-                    ><svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#linkedin"></use>
+                    ><svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -309,15 +309,15 @@
               <ul class="social-list list">
                 <li class="social-list-item">
                   <a class="social-list-item-link" href="">
-                    <svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#instagram"></use>
+                    <svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
                   <a class="social-list-item-link" href="">
-                    <svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#twitter"></use>
+                    <svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -326,8 +326,8 @@
                     class="social-lisy-item-link"
                     href=""
                     aria-label="иконка фейсбука"
-                    ><svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#facebook"></use>
+                    ><svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -336,8 +336,8 @@
                     class="social-list-item-link"
                     href=""
                     aria-label="иконка линкедина"
-                    ><svg class="social-media-link-item-svg">
-                      <use href="./images/svg/sprite.svg#linkedin"></use>
+                    ><svg class="social-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
