Сделал ховер на иконки наша команда

--- a/index.html
+++ b/index.html
@@ -180,20 +180,14 @@
                   </a>
                 </li>
                 <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка фейсбука"
-                    ><svg class="social-list-item-link-svg">
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
-                  <a
-                    class="social-list-item-link"
-                    href=""
-                    aria-label="иконка линкедина"
+                  <a class="social-list-item-link"href=""
                     ><svg class="social-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
@@ -220,19 +214,16 @@
                   </a>
                 </li>
                 </li>
-               <li class="social-list-item">
+                <li class="social-list-item">
                   <a class="social-list-item-link" href="">
                     <svg class="social-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка фейсбука"
-                    ><svg class="social-list-item-link-svg">
+               <li class="social-list-item">
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
@@ -275,11 +266,8 @@
                   </a>
                 </li>
                 <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка фейсбука"
-                    ><svg class="social-list-item-link-svg">
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
@@ -322,20 +310,14 @@
                   </a>
                 </li>
                 <li class="social-list-item">
-                  <a
-                    class="social-lisy-item-link"
-                    href=""
-                    aria-label="иконка фейсбука"
-                    ><svg class="social-list-item-link-svg">
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
-                  <a
-                    class="social-list-item-link"
-                    href=""
-                    aria-label="иконка линкедина"
+                  <a class="social-list-item-link" href=""
                     ><svg class="social-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
