--- a/index.html
+++ b/index.html
@@ -335,45 +335,45 @@
           <ul class="clients-list list">
             <li class="clients-list-item">
               <a class="clients-link-list" href="">
-                <img
-                  src="./images/clients/logo-1.svg"
-                  alt="логотип компании клиента"
-              /></a>
+                    <svg class="clients-list-item-link-svg">
+                      <use href="./images/sprite.svg#logo1"></use>
+                    </svg>
+                  </a>
             </li>
             <li class="clients-list-item">
-              <a class="clients-link-list" href=""
-                ><img
-                  src="./images/clients/logo-2.svg"
-                  alt="логотип компании клиента"
-              /></a>
+              <a class="clients-link-list" href="">
+                    <svg class="clients-list-item-link-svg">
+                      <use href="./images/sprite.svg#logo2"></use>
+                    </svg>
+                  </a>
             </li>
             <li class="clients-list-item">
-              <a class="clients-link-list" href=""
-                ><img
-                  src="./images/clients/logo-3.svg"
-                  alt="логотип компании клиента"
-              /></a>
+              <a class="clients-link-list" href="">
+                    <svg class="clients-list-item-link-svg">
+                      <use href="./images/sprite.svg#logo3"></use>
+                    </svg>
+                  </a>
             </li>
             <li class="clients-list-item">
-              <a class="clients-link-list" href=""
-                ><img
-                  src="./images/clients/logo-4.svg"
-                  alt="логотип компании клиента"
-              /></a>
+              <a class="clients-link-list" href="">
+                    <svg class="clients-list-item-link-svg">
+                      <use href="./images/sprite.svg#logo4"></use>
+                    </svg>
+                  </a>
             </li>
             <li class="clients-list-item">
-              <a class="clients-link-list" href=""
-                ><img
-                  src="./images/clients/logo-5.svg"
-                  alt="логотип компании клиента"
-              /></a>
+              <a class="clients-link-list" href="">
+                    <svg class="clients-list-item-link-svg">
+                      <use href="./images/sprite.svg#logo5"></use>
+                    </svg>
+                  </a>
             </li>
             <li class="clients-list-item">
-              <a class="clients-link-list" href=""
-                ><img
-                  src="./images/clients/logo-6.svg"
-                  alt="логотип компании клиента"
-              /></a>
+              <a class="clients-link-list" href="">
+                    <svg class="clients-list-item-link-svg">
+                      <use href="./images/sprite.svg#logo6"></use>
+                    </svg>
+                  </a>
             </li>
           </ul>
         </div>
