--- a/index.html
+++ b/index.html
@@ -417,23 +417,29 @@
         </div>
         <div class="footer-container-connect">
           <h3 hidden>Социальные сети</h3>
-          <p><b class="footer-join-us">ПРИСОЕДИНЯЙТЕСЬ</b></p>
+          <p class="desctext"><b class="footer-join-us">ПРИСОЕДИНЯЙТЕСЬ</b></p>
           <ul class="social-links list">
             <li class="social-links-item-link link">
-              <a href="" aria-label="иконка инстаграма"
-                ><img src="#" alt=""
-              /></a>
+              <a class="footer-link-list" href="" aria-label="иконка инстаграма"
+                ><svg class="footer-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-instagram1"></use>
+                    </svg></a>
             </li>
             <li class="social-links-item-link link">
-              <a href="" aria-label="иконка твиттера"><img src="#" alt="" /></a>
+              <a class="footer-link-list" href="" aria-label="иконка твиттера"><svg class="footer-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-twitter1"></use>
+                    </svg></a></a>
             </li>
             <li class="social-links-item-link link">
-              <a href="" aria-label="иконка фейсбука"><img src="#" alt="" /></a>
+              <a class="footer-link-list" href="" aria-label="иконка фейсбука"><svg class="footer-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-facebook1"></use>
+                    </svg></a></a>
             </li>
             <li class="social-links-item-link link">
-              <a href="" aria-label="иконка линкедина"
-                ><img src="#" alt=""
-              /></a>
+              <a class="footer-link-list" href="" aria-label="иконка линкедина"
+                ><svg class="footer-list-item-link-svg">
+                      <use href="./images/sprite.svg#icon-linkedin1"></use>
+                    </svg></a></a>
             </li>
           </ul>
         </div>
