сделал страницу портфолио
добавил тени и иконки со спрайта

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
         </nav>
         <div class="contacts-header">
           <address class="address">
-            <a class="header-address-link" href="">info@devstudio.com</a>
-            <a class="header-tel-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="header-address-link" href="">
+              <svg class="header-footer-mail">
+                <use href="./images/sprite.svg/#mail"></use>
+              </svg> info@devstudio.com</a>
+            <a class="header-tel-link" href="tel:+380961111111">+38 096 111 11 11</a
             >
           </address>
         </div>
