--- a/portfolio.html
+++ b/portfolio.html
@@ -190,9 +190,11 @@
                     </svg></a></a>
             </li>
             <li class="social-links-item-link link">
-              <a class="footer-link-list" href="" aria-label="иконка фейсбука"><svg class="footer-list-item-link-svg">
+              <a class="footer-link-list" href="" aria-label="иконка фейсбука">
+                <svg class="footer-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-facebook1"></use>
-                    </svg></a></a>
+                    </svg>
+                  </a>
             </li>
             <li class="social-links-item-link link">
               <a class="footer-link-list" href="" aria-label="иконка линкедина"
