--- a/index.html
+++ b/index.html
@@ -35,14 +35,21 @@
           </ul>
         </nav>
         <div class="contacts-header">
-          <address class="address">
-            <a class="header-address-link" href="">
-              <svg class="header-footer-mail">
-                <use href="./images/sprite.svg/#mail"></use>
-              </svg> info@devstudio.com</a>
+          <ul class="header-list" >
+            <li>
+            <a class="header-address-link" href="mailto:info@devstudio.com">
+              <svg class="header-mail-svg">
+                <use 
+                href="./images/sprite.svg/#mail">
+              </use>
+              </svg>
+              info@devstudio.com</a>
+              </li>
+              <li>
             <a class="header-tel-link" href="tel:+380961111111">+38 096 111 11 11</a
             >
-          </address>
+            </li>
+            </ul>
         </div>
       </div>
     </header>
@@ -449,11 +456,3 @@
     </footer>
   </body>
 </html>
-
-<!-- FONTS
-  Raleway Bold
-  Roboto Black
-  Roboto Bold
-  Roboto Regular
-  Roboto Medium
--->
