--- a/index.html
+++ b/index.html
@@ -35,22 +35,21 @@
           </ul>
         </nav>
         <div class="contacts-header">
-          <ul class="header-list" >
-            <li>
-            <a class="header-address-link" href="mailto:info@devstudio.com">
-              <svg class="header-mail-svg">
-                <use 
-                href="./images/sprite.svg/#mail">
-              </use>
-              </svg>
-              info@devstudio.com</a>
-              </li>
-              <li>
-            <a class="header-tel-link" href="tel:+380961111111">+38 096 111 11 11</a
-            >
-            </li>
-            </ul>
-        </div>
+           <ul class="header-list" >
+                <li>
+                   <a class="header-address-link" href="">
+                      <svg class="header-svg">
+                       <use href="./images/sprite.svg#mail"></use>
+                     </svg>info@devstudio.com</a>
+                 </li>  
+                  <li>
+                   <a class="header-address-link" href="">
+                      <svg class="header-svg">
+                       <use href="./images/sprite.svg#phone"></use>
+                     </svg>+38 096 111 11 11</a>
+                 </li>  
+             </ul>
+         </div>
       </div>
     </header>
 
