--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,7 @@
           >
           <ul class="navigation-list list">
             <li class="navigation-list-item">
-              <a class="navigation-list-link link" href="./index.html"
-                >Студия</a
-              >
+              <a class="navigation-list-link link" href="/index.html">Студия</a>
             </li>
             <li class="navigation-list-item">
               <a class="navigation-list-link link" href="portfolio.html"
@@ -36,14 +34,22 @@
             </li>
           </ul>
         </nav>
-        <div class="header-utils">
-          <address class="header-address">
-            <a class="header-address-link" href="">info@devstudio.com</a>
-            <a class="header-tel-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </address>
-        </div>
+        <div class="contacts-header">
+           <ul class="header-list" >
+                <li>
+                   <a class="header-address-link" href="">
+                      <svg class="header-svg">
+                       <use href="./images/sprite.svg#mail"></use>
+                     </svg>info@devstudio.com</a>
+                 </li>  
+                  <li>
+                   <a class="header-address-link" href="">
+                      <svg class="header-svg">
+                       <use href="./images/sprite.svg#phone"></use>
+                     </svg>+38 096 111 11 11</a>
+                 </li>  
+             </ul>
+         </div>
       </div>
     </header>
     <main>
