--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           >
           <ul class="navigation-list list">
             <li class="navigation-list-item">
-              <a class="navigation-list-link link" href="/index.html">Студия</a>
+              <a class="navigation-list-link link" href="index.html">Студия</a>
             </li>
             <li class="navigation-list-item">
               <a class="navigation-list-link link" href="portfolio.html"
@@ -70,11 +70,9 @@
           <ul class="about-us list">
             <li class="about-us-list">
               <div class="about-us-img-back">
-                <img
-                  class="about-us-img"
-                  src="./images/aboutus/antenna-1.svg"
-                  alt="антенна"
-                />
+                 <svg class="aboutus-svg-back">
+                      <use href="./images/sprite.svg#icon-antenna-1"></use>
+                    </svg>
               </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="description">
@@ -84,11 +82,9 @@
             </li>
             <li class="about-us-list">
               <div class="about-us-img-back">
-                <img
-                  class="about-us-img"
-                  src="./images/aboutus/clock-1.svg"
-                  alt="часы"
-                />
+                <svg class="aboutus-svg-back">
+                      <use href="./images/sprite.svg#icon-clock-1"></use>
+                    </svg>
               </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="description">
@@ -98,11 +94,9 @@
             </li>
             <li class="about-us-list">
               <div class="about-us-img-back">
-                <img
-                  class="about-us-img"
-                  src="./images/aboutus/diagram-1.svg"
-                  alt="диаграмма"
-                />
+                 <svg id="svg1" class="aboutus-svg-back">
+                      <use href="./images/sprite.svg#icon-diagram-1"></use>
+                    </svg>
               </div>
 
               <h3 class="title">Планирование</h3>
@@ -113,11 +107,9 @@
             </li>
             <li class="about-us-list">
               <div class="about-us-img-back">
-                <img
-                  class="about-us-img"
-                  src="./images/aboutus/astronaut-1.svg"
-                  alt="астронавт"
-                />
+                <svg class="aboutus-svg-back">
+                      <use href="./images/sprite.svg#icon-astronaut-1"></use>
+                    </svg>
               </div>
               <h3 class="title">Современные технологии</h3>
               <p class="description">
@@ -436,18 +428,18 @@
             <li class="social-links-item-link link">
               <a class="footer-link-list" href="" aria-label="иконка твиттера"><svg class="footer-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-twitter1"></use>
-                    </svg></a></a>
+                    </svg></a>
             </li>
             <li class="social-links-item-link link">
               <a class="footer-link-list" href="" aria-label="иконка фейсбука"><svg class="footer-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-facebook1"></use>
-                    </svg></a></a>
+                    </svg></a>
             </li>
             <li class="social-links-item-link link">
               <a class="footer-link-list" href="" aria-label="иконка линкедина"
                 ><svg class="footer-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-linkedin1"></use>
-                    </svg></a></a>
+                    </svg></a>
             </li>
           </ul>
         </div>
